improve accessibility by increasing the contrast of feeds and fixing list elements

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -106,7 +106,7 @@ header a.active {
 }
 
 header a.feed {
-    color: #666;
+    color: #999;
 }
 
 header,
